fix roundedButton position on ios Safari

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -428,7 +428,8 @@ a,
     position: absolute;
     left: 0;
     right: 0;
-    top: calc(100vh - 50px - 20px);
+    //top: calc(100vh - 50px - 20px);
+    bottom: 20px;
     margin: auto;
     z-index: 1;
     background: $green;
